hello world - summary
hello world - description

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# 2016_4_3
+
+- AntonioR's fork of the Xenoveritas version
+
 # News for Abuse-XV 0.9 (unreleased)
 
 - Xenoveritas's fork of the SDL version
