Quick load, bullet time, font
- again had to fix level music, third time is the charm...
- added quick load using F9
- added bullet time (it just increases the physics update time)
- added an option to disable big font, because it isn't being rendered
properly (lines under letters and stuff)
- removed some hardcoded keys for previous and next weapon

--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,8 @@ ABUSE:
 	- rebindable controller buttons, saving and loading of button bindings via config file
 	- navigating the main menu and save/load screens using dpad or left stick
 - fixed level music not being played correctly when level was loaded
+- quick load using F9
+- bullet time
 	
 ABUSE-TOOL:
 - extracting PCX images in SPEC files to modern image formats using OpenCV
