--- a/NEWS
+++ b/NEWS
@@ -21,9 +21,10 @@ ABUSE:
 	- rebindable controller buttons, saving and loading of button bindings via config file
 	- navigating the main menu and save/load screens using dpad or left stick
 - fixed level music not being played correctly when level was loaded
-- quick load using F9
-- bullet time
-	
+- quick load using F9, quick save using F5 on save consoles
+- fixed gamma setting not being saved
+- added cheats via chat console: bullettime, god, giveall, flypower, sneakypower, fastpower, healthpower
+
 ABUSE-TOOL:
 - extracting PCX images in SPEC files to modern image formats using OpenCV
 	- extracting as individual files
