High resolution menu buttons and images
Enabled high resolution images from the Mac OS release:
- activated using "hires" in config file
- hires button images in the main menu
- hires logo, intro, credits and end screens

I failed to enable hires menu screen, because of the different palette
it uses

- added "victory" music in the end screen
- re-enabled the credits button in the main menu, and disabled
multiplayer button, because multiplayer doesn't work and crashes the
game
- centered the quit window and end level screen

--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ ABUSE:
 - quick load using F9, quick save using F5 on save consoles
 - fixed gamma setting not being saved
 - added cheats via chat console: bullettime, god, giveall, flypower, sneakypower, fastpower, healthpower
+- enabled some high resolution images from the 1997 Mac OS release
 
 ABUSE-TOOL:
 - extracting PCX images in SPEC files to modern image formats using OpenCV
