Bug fixes and GUI alignment
- fixed bugs with F5-F12 keys, quick load and escape when player is dead
- turned off that flickering image appearing in bottom-left corer of
screen during game
- fixed the wrong health power image being used in game by renaming it
in misc.spe
- small font is now always being used for save game thumbnail
- enabled the original big font in startup.lsp
- realigned the text and/or GUI buttons for big font in the intro
screen, volume, gamma and quit window

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,10 @@ ABUSE:
 - added cheats via chat console: bullettime, god, giveall, flypower, sneakypower, fastpower, healthpower
 - enabled some high resolution images from the 1997 Mac OS release
 - toggle window input grab using F6
+- turned off that image that would randomly flicker in the bottom-left corner
+- fixed health power object image
+- turned on, what seems to be, the original big font and aligned GUI objects for it
+- set the small font to always be used for save game thumbnails
 
 ABUSE-TOOL:
 - extracting PCX images in SPEC files to modern image formats using OpenCV
